fix(modal): sets correct overflow setting so modal contains inner elements with a scroll

--- a/client/index.sass
+++ b/client/index.sass
@@ -43,6 +43,7 @@ section
 	border-radius: 5px
 	padding: 1rem
 	text-shadow: none
+	overflow-y: scroll
 
 footer
 	position: fixed
